# x-spider2

./: README.md  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: network.rs
src/components/: SideBar.tsx
src/components/download-management/: TabDownloading.tsx
src/components/homepage/: UserListManager.tsx
src/constants/: settings.ts
src/hooks/background-tasks/: useAriaBinding.ts
src/pages/: About.tsx  Homepage.tsx  Settings.tsx
src/stores/: app-state.ts  download.ts  homepage.ts  settings.ts
src/utils/: aria2.ts
